--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.8.1
-Django==5.1.3
+Django==3.1.12
+djongo==1.3.7
+dnspython==1.16.0
+pymongo==3.11.4
 python-dotenv==1.0.1
-sqlparse==0.5.2
+pytz==2024.2
+setuptools==75.6.0
+sqlparse==0.2.4
 tzdata==2024.2
