--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,49 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.7.0
 asgiref==3.8.1
+attrs==24.3.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+deprecation==2.1.0
 Django==3.1.12
 djongo==1.3.7
 dnspython==1.16.0
+frozenlist==1.5.0
+gotrue==2.11.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.7
+httpx==0.27.2
+hyperframe==6.0.1
+idna==3.10
+multidict==6.1.0
+neo4j==5.27.0
+packaging==24.2
+postgrest==0.18.0
+propcache==0.2.1
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+pydantic==2.10.4
+pydantic_core==2.27.2
 pymongo==3.11.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+realtime==2.0.6
+requests==2.32.3
 setuptools==75.6.0
+six==1.17.0
+sniffio==1.3.1
 sqlparse==0.2.4
+storage3==0.9.0
+supabase==2.10.0
+supafunc==0.7.0
+typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.3.0
+websockets==13.1
+yarl==1.18.3
