--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ hyperframe==6.0.1
 idna==3.10
 multidict==6.1.0
 neo4j==5.27.0
+neomodel==5.4.2
 packaging==24.2
 postgrest==0.18.0
 propcache==0.2.1
